--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/image/
+    - assets/image/project1.png
+    - assets/image/project2.png
+    - assets/image/cvlogo.png
+    - assets/image/background.jpeg
+    - assets/image/email.png
+    - assets/image/github.png
+    - assets/image/linkedin.png
+    - assets/image/linkedin2.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
