--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   google_fonts: ^6.2.1
   url_launcher: ^6.3.0
+  go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
